<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/navdrawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:scrollbarStyle="insideOverlay"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navdrawer_chosen_account_height"
            android:minHeight="@dimen/navdrawer_chosen_account_height"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tikkeo_icon_design"
                android:scaleType="centerCrop"
                android:background="?colorPrimary"
                android:foreground="@color/black_filter"
                android:visibility="gone"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_box"
                android:paddingRight="@dimen/padding_normal"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal"
                android:paddingBottom="@dimen/account_box_paddingbottom">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/account_box_button_text_size"
                    android:textAllCaps="false"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    style="?android:borderlessButtonStyle"
                    android:id="@+id/account_box_login_button"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textSize="@dimen/account_box_button_text_size"
                    android:textAllCaps="false"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    style="?android:borderlessButtonStyle"
                    android:id="@+id/account_box_signup_button"/>

                <com.slenhtech_corp.tikkeo.widget.BezelImageView
                    android:layout_width="@dimen/account_box_profile_image_size"
                    android:layout_height="@dimen/account_box_profile_image_size"
                    android:src="@drawable/user_image_empty"
                    android:scaleType="centerInside"
                    app:maskDrawable="@drawable/circle_mask"
                    app:borderDrawable="@drawable/circle_border"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:padding="16dp"
                    android:id="@+id/profile_image"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/profile_image"
                    android:gravity="center_horizontal"
                    android:text="@string/account_box_salute_placeholer"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/account_box_salute"
                    android:id="@+id/account_box_salute"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/account_box_change_location_button_height"
                    android:minWidth="@dimen/account_box_change_location_button_min_width"
                    android:id="@+id/account_box_change_location"
                    android:drawableStart="@drawable/ic_action_geolocalize"
                    android:drawableLeft="@drawable/ic_action_geolocalize"
                    android:text="@string/location_placeholder"
                    android:layout_below="@+id/account_box_salute"
                    android:layout_marginTop="6dp"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:background="@drawable/account_box_change_location_button"/>
            </RelativeLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/navdrawer_items_list"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/navview_menu_item_top_bottom_padding"
            android:layout_marginBottom="@dimen/navview_menu_item_top_bottom_padding"/>
    </LinearLayout>

</ScrollView>