<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slenhtech_corp.tikkeo.fragment.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/white_box_margin_bottom"
            app:cardCornerRadius="0dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_box_background"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/curated_collections"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/textColorSecondary"
                    android:layout_marginBottom="@dimen/white_box_padding_top_bottom"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"/>

                <android.support.v4.view.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/white_box_image_height"
                    android:id="@+id/curated_collection_pager"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"/>

                <com.viewpagerindicator.LinePageIndicator
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectedColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/curated_collection_pager_indicator"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/white_box_margin_bottom"-->
            <!--app:cardCornerRadius="0dp"-->

            <!--&gt;-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:paddingLeft="@dimen/padding_white_box"-->
                <!--android:paddingRight="@dimen/padding_white_box"-->
                <!--android:background="@color/white_box_background"-->
                <!--android:paddingBottom="@dimen/white_box_padding_top_bottom"-->
                <!--android:paddingTop="@dimen/white_box_padding_top_bottom"-->
                <!--&gt;-->

                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="8dp">-->
                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/curated_collections"-->
                        <!--android:textStyle="bold"-->
                        <!--android:textSize="15sp"-->
                        <!--android:textColor="@color/textColorSecondary"-->
                        <!--android:layout_marginBottom="@dimen/white_box_padding_top_bottom"-->
                        <!--android:layout_alignParentStart="true"-->
                        <!--android:layout_alignParentLeft="true"-->
                        <!--android:layout_centerVertical="true"/>-->

                    <!--<Button-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="30dp"-->
                        <!--android:text="@string/more"-->
                        <!--android:textSize="@dimen/more"-->
                        <!--android:layout_alignParentEnd="true"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:theme="@style/TikkeoTheme.Button"/>-->
                <!--</RelativeLayout>-->

                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="@dimen/white_box_image_height"-->
                    <!--android:background="@color/image_placeholder"-->
                    <!--android:layout_marginBottom="12dp"/>-->
            <!--</LinearLayout>-->

        <!--</android.support.v7.widget.CardView>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_normal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/featured"
                android:textColor="@color/textColorSecondary"
                android:layout_marginTop="@dimen/white_box_padding_top_bottom"
                android:layout_marginBottom="@dimen/white_box_padding_top_bottom"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:elevation="4dp"
                android:layout_marginBottom="@dimen/event_box_margin_bottom"
                android:onClick="openDetail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/event_box_cover_height"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitXY"
                        android:src="@drawable/event_1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/event_box_title_padding_top_bottom"
                        android:paddingTop="@dimen/event_box_title_padding_top_bottom"
                        android:paddingLeft="@dimen/event_box_title_padding_left_right"
                        android:paddingRight="@dimen/event_box_title_padding_left_right"
                        android:textSize="@dimen/event_box_title_size"
                        android:textColor="@color/textColorSecondary"
                        android:text="@string/placeholder_event_1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/icon_calendar"
                            android:scaleType="centerInside"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vendredi 5 Mars"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/icon_geolocalize"
                                android:scaleType="centerInside"
                                android:layout_marginRight="10dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Libreville"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Gratuit"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:elevation="4dp"
                android:layout_marginBottom="@dimen/event_box_margin_bottom"
                android:onClick="openDetail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/event_box_cover_height"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitXY"
                        android:src="@drawable/event_2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/event_box_title_padding_top_bottom"
                        android:paddingTop="@dimen/event_box_title_padding_top_bottom"
                        android:paddingLeft="@dimen/event_box_title_padding_left_right"
                        android:paddingRight="@dimen/event_box_title_padding_left_right"
                        android:textSize="@dimen/event_box_title_size"
                        android:textColor="@color/textColorSecondary"
                        android:text="@string/placeholder_event_2"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/icon_calendar"
                            android:scaleType="centerInside"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vendredi 5 Mars"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/icon_geolocalize"
                                android:scaleType="centerInside"
                                android:layout_marginRight="10dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Libreville"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Gratuit"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:elevation="4dp"
                android:layout_marginBottom="@dimen/event_box_margin_bottom"
                android:onClick="openDetail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/event_box_cover_height"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="fitXY"
                        android:src="@drawable/event_3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/event_box_title_padding_top_bottom"
                        android:paddingTop="@dimen/event_box_title_padding_top_bottom"
                        android:paddingLeft="@dimen/event_box_title_padding_left_right"
                        android:paddingRight="@dimen/event_box_title_padding_left_right"
                        android:textSize="@dimen/event_box_title_size"
                        android:textColor="@color/textColorSecondary"
                        android:text="@string/placeholder_event_3"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/icon_calendar"
                            android:scaleType="centerInside"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vendredi 5 Mars"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1"
                            android:gravity="center_vertical">
                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/icon_geolocalize"
                                android:scaleType="centerInside"
                                android:layout_marginRight="10dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Libreville"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Gratuit"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>


</ScrollView>
